# epub-thumbnailer

./: README  README.md  epub-thumbnailer  epub.thumbnailer  install.py  pyproject.toml
src/: epub-thumbnailer.py  epub-thumbnailer.schemas  epub.thumbnailer
